# ideal-functions

./: .coverage  .gitignore  README.md  pyproject.toml
src/: debug_main.py  ideal_function_application.py
src/application/: CustomError.py  DataManager.py  IdealFunctionsManager.py  Visualizer.py
src/application/rest/: ideal_functions_API.py
src/application/rest/static/: table-template.css
test/: test_data_manager.py  test_ideal_function_API.py  test_ideal_functions_manager.py  test_visualizer.py
