[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'ideal-functions'
version = '0.0.0'
description = '''The goal of this project is to develop a Python-based application that can load training data,
identify the best ideal functions, map test data points to these ideal functions, and visualize the results'''
readme = 'README.md'
requires-python = '>=3.11'
classifiers = [
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]
authors = [
  { name = 'Muhammed Yücel', email = 'muhammed.yuecel@iu-study.org' },
]
keywords = ['']
maintainers = [
  { name = 'Muhammed Yücel', email = 'muhammed.yuecel@iu-study.org' },
]

dependencies = [
    "bokeh>=3.6.2",
    "fastapi>=0.115.10",
    "httpx>=0.28.0",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    'coverage==7.6.1',
    'pytest==8.3.3',
    'pytest-asyncio==0.25.3',
    'pytest-cov==5.0.0',
]
dev = [
    'ruff==0.7.3',
    'ideal-function[test]']

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '-ra -q'
testpaths = [
    'test',
    'test-module',
]

#[project.scripts]
#application = 'src.application.ideal_function_application:app'

[project.urls]
Homepage = 'github.com'
